--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fb-crm-integration",
+  "name": "tijaratk-api",
   "version": "0.0.1",
   "description": "",
   "author": "Safwat Fathi",
@@ -46,6 +46,7 @@
     "@swc/core": "^1.10.1",
     "@types/express": "^5.0.0",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
