--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 # App URL
-DEV_APP_URL=
-PROD_APP_URL=
+APP_URL=
 
 HTTP_SERVER_PORT=
 
@@ -14,7 +13,14 @@ DB_PASS=
 JWT_SECRET=
 CSRF_SECRET=
 
-DEV_CLIENT_URL=
-PROD_CLIENT_URL=
+ENCRYPTION_PASSWORD=
 
-# SMTP config
+CLIENT_URL=
+
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
+FACEBOOK_CALLBACK_URL=
+# Facebook WEBHOOK
+FACEBOOK_WEBHOOK_VERIFY_TOKEN=
+# Graph API
+FACEBOOK_GRAPH_API_BASE_URL=
