--- a/package.json
+++ b/package.json
@@ -7,20 +7,26 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "NODE_ENV=production node dist/main",
-    "typeorm": "yarn build && yarn typeorm-ts-node-commonjs -d ./src/config/typeorm.config.ts",
-    "migration:create": "yarn typeorm -- migration:create",
-    "migration:generate": "yarn typeorm -- migration:generate",
-    "migration:run": "yarn typeorm -- migration:run",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "typeorm:dev": "NODE_ENV=development dotenv_config_path=.env.development ts-node -r dotenv/config ./node_modules/typeorm/cli.js",
+    "typeorm:prod": "NODE_ENV=production dotenv_config_path=.env.production ts-node -r dotenv/config ./node_modules/typeorm/cli.js",
+    "migration:generate:dev": "yarn typeorm:dev  migration:generate -d src/config/orm.config.ts",
+    "migration:run:dev": "yarn typeorm:dev  migration:run -d src/config/orm.config.ts",
+    "migration:revert:dev": "yarn typeorm:dev  migration:revert -d src/config/orm.config.ts",
+    "migration:generate:prod": "yarn typeorm:prod  migration:generate -d src/config/orm.config.ts",
+    "migration:run:prod": "yarn typeorm:prod  migration:run -d src/config/orm.config.ts",
+    "migration:revert:prod": "yarn typeorm:prod  migration:revert -d src/config/orm.config.ts",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" fix",
     "prepare": "husky install"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/event-emitter": "^3.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
@@ -28,6 +34,7 @@
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/throttler": "^6.3.0",
     "class-transformer": "^0.5.1",
+    "cron": "^3.5.0",
     "dotenv": "^16.4.7",
     "helmet": "^8.0.0",
     "passport": "^0.7.0",
@@ -44,6 +51,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@swc/cli": "^0.5.2",
     "@swc/core": "^1.10.1",
+    "@types/cache-manager": "^5.0.0",
     "@types/express": "^5.0.0",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
