--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "start:prod": "NODE_ENV=production node dist/main",
     "typeorm:dev": "NODE_ENV=development dotenv_config_path=.env.development ts-node -r dotenv/config ./node_modules/typeorm/cli.js",
     "typeorm:prod": "NODE_ENV=production dotenv_config_path=.env.production ts-node -r dotenv/config ./node_modules/typeorm/cli.js",
+    "migration:create": "yarn typeorm:dev migration:create",
     "migration:generate:dev": "yarn typeorm:dev  migration:generate -d src/config/orm.config.ts",
     "migration:run:dev": "yarn typeorm:dev  migration:run -d src/config/orm.config.ts",
     "migration:revert:dev": "yarn typeorm:dev  migration:revert -d src/config/orm.config.ts",
     "migration:generate:prod": "yarn typeorm:prod  migration:generate -d src/config/orm.config.ts",
     "migration:run:prod": "yarn typeorm:prod  migration:run -d src/config/orm.config.ts",
     "migration:revert:prod": "yarn typeorm:prod  migration:revert -d src/config/orm.config.ts",
+    "schema:drop": "yarn typeorm:dev schema:drop -d src/config/orm.config.ts",
+    "schema:sync": "yarn typeorm:dev schema:sync -d src/config/orm.config.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" fix",
     "prepare": "husky install"
   },
@@ -36,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "cron": "^3.5.0",
     "dotenv": "^16.4.7",
+    "express-session": "^1.18.1",
     "helmet": "^8.0.0",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
@@ -53,6 +57,7 @@
     "@swc/core": "^1.10.1",
     "@types/cache-manager": "^5.0.0",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
