--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/config": "^3.3.0",
+    "@nestjs/platform-ws": "^11.0.11",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "@swc/cli": "^0.5.2",
