--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,10 @@ jobs:
           node-version: 20.18.3
 
       - name: Install Dependencies
-        run: npm install
+        run: yarn
 
       - name: Build Project
-        run: npm run build
+        run: yarn build
 
       - name: Deploy to DigitalOcean via SSH
         uses: appleboy/ssh-action@master
