add: llm api env vars

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,7 @@ FACEBOOK_CALLBACK_URL=
 FACEBOOK_WEBHOOK_VERIFY_TOKEN=
 # Graph API
 FACEBOOK_GRAPH_API_BASE_URL=
+
+# LLM API
+LLM_API_URL=
+LLM_API_KEY=
