update: migrations scripts with tsconfig-paths

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start:prod": "NODE_ENV=production node dist/main",
     "seed:dev": "NODE_ENV=development dotenv_config_path=.env.development ts-node -r tsconfig-paths/register -r dotenv/config ./src/common/seed.ts",
     "seed:prod": "NODE_ENV=production dotenv_config_path=.env.production ts-node -r tsconfig-paths/register -r dotenv/config ./src/common/seed.ts",
-    "typeorm:dev": "NODE_ENV=development dotenv_config_path=.env.development ts-node -r dotenv/config ./node_modules/typeorm/cli.js",
-    "typeorm:prod": "NODE_ENV=production dotenv_config_path=.env.production ts-node -r dotenv/config ./node_modules/typeorm/cli.js",
+    "typeorm:dev": "NODE_ENV=development dotenv_config_path=.env.development ts-node -r tsconfig-paths/register -r dotenv/config ./node_modules/typeorm/cli.js",
+    "typeorm:prod": "NODE_ENV=production dotenv_config_path=.env.production ts-node -r tsconfig-paths/register -r dotenv/config ./node_modules/typeorm/cli.js",
     "migration:create": "yarn typeorm:dev migration:create",
     "migration:generate:dev": "yarn typeorm:dev migration:generate -d src/config/orm.config.ts",
     "migration:run:dev": "yarn typeorm:dev migration:run -d src/config/orm.config.ts",
