--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ DB_NAME=
 DB_PASS=
 
 JWT_SECRET=
+THEME_EDITOR_JWT_SECRET=
+THEME_EDITOR_PREVIEW_URL=
+THEME_EDITOR_TOKEN_EXPIRES_IN=
 CSRF_SECRET=
 SESSION_SECRET=
 
