--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "seed:prod": "NODE_ENV=production dotenv_config_path=.env.production ts-node -r tsconfig-paths/register -r dotenv/config ./src/common/seed.ts",
     "typeorm:dev": "NODE_ENV=development dotenv_config_path=.env.development ts-node -r tsconfig-paths/register -r dotenv/config ./node_modules/typeorm/cli.js",
     "typeorm:prod": "NODE_ENV=production dotenv_config_path=.env.production ts-node -r tsconfig-paths/register -r dotenv/config ./node_modules/typeorm/cli.js",
-    "migration:create": "yarn typeorm:dev migration:create",
-    "migration:generate:dev": "yarn typeorm:dev migration:generate -d src/config/orm.config.ts",
-    "migration:run:dev": "yarn typeorm:dev migration:run -d src/config/orm.config.ts",
-    "migration:revert:dev": "yarn typeorm:dev migration:revert -d src/config/orm.config.ts",
-    "migration:generate:prod": "yarn typeorm:prod migration:generate -d src/config/orm.config.ts",
-    "migration:run:prod": "yarn typeorm:prod migration:run -d src/config/orm.config.ts",
-    "migration:revert:prod": "yarn typeorm:prod migration:revert -d src/config/orm.config.ts",
-    "schema:drop:dev": "yarn typeorm:dev schema:drop -d src/config/orm.config.ts",
-    "schema:drop:prod": "yarn typeorm:prod schema:drop -d src/config/orm.config.ts",
-    "schema:sync:dev": "yarn typeorm:dev schema:sync -d src/config/orm.config.ts",
-    "schema:sync:prod": "yarn typeorm:prod schema:sync -d src/config/orm.config.ts",
+    "migration:create": "pnpm typeorm:dev migration:create",
+    "migration:generate:dev": "pnpm typeorm:dev migration:generate -d src/config/orm.config.ts",
+    "migration:run:dev": "pnpm typeorm:dev migration:run -d src/config/orm.config.ts",
+    "migration:revert:dev": "pnpm typeorm:dev migration:revert -d src/config/orm.config.ts",
+    "migration:generate:prod": "pnpm typeorm:prod migration:generate -d src/config/orm.config.ts",
+    "migration:run:prod": "pnpm typeorm:prod migration:run -d src/config/orm.config.ts",
+    "migration:revert:prod": "pnpm typeorm:prod migration:revert -d src/config/orm.config.ts",
+    "schema:drop:dev": "pnpm typeorm:dev schema:drop -d src/config/orm.config.ts",
+    "schema:drop:prod": "pnpm typeorm:prod schema:drop -d src/config/orm.config.ts",
+    "schema:sync:dev": "pnpm typeorm:dev schema:sync -d src/config/orm.config.ts",
+    "schema:sync:prod": "pnpm typeorm:prod schema:sync -d src/config/orm.config.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" fix",
     "prepare": "husky install"
   },
@@ -62,7 +62,6 @@
     "@nestjs/typeorm": "^10.0.2",
     "@swc/cli": "^0.5.2",
     "@swc/core": "^1.10.1",
-    "@types/cache-manager": "^5.0.0",
     "@types/express": "^5.0.0",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
