--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@swc/cli": "^0.5.2",
     "@swc/core": "^1.10.1",
     "@types/express": "^5.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
