--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/throttler": "^6.3.0",
     "@nestjs/websockets": "^11.0.11",
+    "@types/sharp": "^0.32.0",
     "class-transformer": "^0.5.1",
     "cron": "^3.5.0",
     "dotenv": "^16.4.7",
@@ -51,6 +52,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.5",
     "swagger-ui-express": "^5.0.1",
     "ws": "^8.18.1"
   },
