--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "schema:drop:prod": "pnpm typeorm:prod schema:drop -d src/config/orm.config.ts",
     "schema:sync:dev": "pnpm typeorm:dev schema:sync -d src/config/orm.config.ts",
     "schema:sync:prod": "pnpm typeorm:prod schema:sync -d src/config/orm.config.ts",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" fix",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "prepare": "husky install"
   },
   "dependencies": {
