--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/throttler": "^6.3.0",
     "@nestjs/websockets": "^11.0.11",
-    "@types/sharp": "^0.32.0",
     "class-transformer": "^0.5.1",
     "cron": "^3.5.0",
     "dotenv": "^16.4.7",
@@ -71,6 +70,7 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "artillery": "^2.0.27",
     "class-validator": "^0.14.1",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
