--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/swagger": "^8.1.0",
     "@nestjs/throttler": "^6.3.0",
     "@nestjs/websockets": "^11.0.11",
+    "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "cron": "^3.5.0",
     "dotenv": "^16.4.7",
@@ -63,6 +64,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@swc/cli": "^0.5.2",
     "@swc/core": "^1.10.1",
+    "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^20.3.1",
